Fix bad alignment for checkboxes

--- a/app/assets/stylesheets/distributor/_settings.css.sass
+++ b/app/assets/stylesheets/distributor/_settings.css.sass
@@ -77,11 +77,10 @@
     margin-bottom: 4px
     &.span6:last-child
       float: right
-  input:not(.btn)
-    height: 30px
 
 #organisation
   .address input
+    height: 30px
     +border-radius(4px)
     &:first-child:not(:only-child)
       +border-radius(4px 0 0 4px)
